[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/SpriteSheet 1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 75, 75, 25, 25 )

[sub_resource type="TileSet" id=1]
0/name = "SpriteSheet 1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 50, 25, 25 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "SpriteSheet 1.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 25, 50, 25, 25 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/VBoxContainer"]
margin_top = 175.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.505882, 0.054902, 0.137255, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 3
size_flags_vertical = 2
columns = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_right = 22.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_left = 26.0
margin_right = 48.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_left = 52.0
margin_right = 74.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_top = 26.0
margin_right = 22.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_left = 26.0
margin_top = 26.0
margin_right = 48.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_left = 52.0
margin_top = 26.0
margin_right = 74.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_top = 52.0
margin_right = 22.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect8" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_left = 26.0
margin_top = 52.0
margin_right = 48.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer/GridContainer"]
margin_left = 52.0
margin_top = 52.0
margin_right = 74.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/ColorRect2/HBoxContainer"]
margin_left = 79.0
margin_right = 500.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.9

[node name="LevelTiles" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -25, 138 )

[node name="PlayerMiddlePosition" type="Position2D" parent="."]
position = Vector2( 224, 138 )

[node name="EventMiddlePosition" type="Position2D" parent="."]
position = Vector2( 251, 138 )

[node name="Tween" type="Tween" parent="."]

[node name="Event" type="Node2D" parent="."]
position = Vector2( 525, 138 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
